# sketchem

./: .copier-answers.yml  .gitignore  LICENSE  README.md  README_GEMINI_API.md  mindmap.scap  pyproject.toml  requirements.txt  run_app.py  temp_main.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml
assets/: canvas.html
data/: molecule_data.py
docs/source/: conf.py
docs/source/api/: modules.rst  sketchem.rst
notebooks/: project_report.ipynb  sketchem_project_report.ipynb
src/: game_manager.py  main.py  ml_model.py
src/sketchem/: __init__.py  game_page.py  main.py  model_setup.py  smiles_validator.py  styles.css
src/sketchem/.streamlit/: config.toml
src/sketchem/data/: __init__.py  molecules.py
src/sketchem/db/: __init__.py  mock_db.py
src/sketchem/pages/: game_page_multi.py  game_page_single.py  guide_page.py  home_page.py  multiplayer_setup.py  multiplayer_setup_styling.css  single_player_setup.py  waiting_room.py
src/sketchem/pages/style/: gradient_button_css.py  guide_page_styling.css  home_page_styling.css  multiplayer_game_page_styling.css  multiplayer_setup_styling.css  single_player_setup_styling.css  single_setup_styling.css  singleplayer_game_page_styling.css  singleplayer_setup_styling.css
src/sketchem/utils/: back_button.py  create_category.py  create_category_2.py  create_category_prompt.py  environment.py  fancy_gradient_button.py  game_state.py  model_setup.py  old_smiles_validator.py  smiles_validator.py  smiles_validator_ai.py  smiles_validator_ai_2.py  smiles_validator_ai_prompt.py  smiles_validator_ai_prompt_2.py  toast.py
src/sketchem/utils/deprecated/: create_category_deprecated.py  create_category_prompt_deprecated.py  post_install.py  smiles_validator.py  smiles_validator_ai.py
src/static/: script.js  style.css
src/templates/: layout.html
tests/: test_example_module.py  test_game_manager.py  test_model.py  test_smiles_validator.py
