[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sketchem"
version = "0.0.1"
description = "A molecular pictionary"
authors = ["Axel Brunetta <axel.brunetta@gmail.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"  # Allow Python 3.12
rdkit = "*"
decimer = "*"
numpy = "*"
dash = "*"
pillow = "*"
streamlit = "*"
streamlit-drawable-canvas = "*"
python-dotenv = "*"
google-genai = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
tox = "^4.0"
