[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sketchem"
version = "0.0.1"
description = "A molecular pictionary"
authors = ["Axel Brunetta <axel.brunetta@gmail.com>"]
readme = "README.md"
license = "LICENSE"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"  
rdkit = "*"
decimer = "*"
numpy = ">=1.26.0,<1.27.0" 
dash = "*"
pillow = "*"
streamlit = "*"
streamlit-drawable-canvas = "*"
python-dotenv = "*"
google-genai = "*"
streamlit-extras = "*"
opencv-python-headless = "*"  
pubchempy = "*"
streamlit-screen-stats = {git = "https://github.com/axelbrunetta/st-screen-stats", rev = "48a96a4e6c25ad7afcd563bcc94f1921c4de3cf2"}
streamlit-local-storage = "*"
streamlit-browser-storage = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
tox = "^4.0"
